finally understand relative and absolute position. i am in love! header nearly there.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <link href='https://fonts.googleapis.com/css?family=Yellowtail' rel='stylesheet' type='text/css'> <!-- .logo_title -->
-    <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'> <!-- .tagline -->
+    <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'> <!-- .logo_tagline -->
     <link href='https://fonts.googleapis.com/css?family=Oswald:700,400' rel='stylesheet' type='text/css'> <!-- .blog_title -->
     <link href='https://fonts.googleapis.com/css?family=Rajdhani:400,300' rel='stylesheet' type='text/css'> <!-- .blog_date -->
     <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'> <!-- main text font -->
@@ -21,10 +21,17 @@
         <img class="logo" src="img/logo.png">
 
         <h1 class="logo_title">Delicious</h1>
-        <p class="tagline">The Best Food Blog on the Web</p>
+        <p class="logo_tagline">The Best Food Blog on the Web</p>
 
         <div class="social_icons">
-          Place images of social icons here.
+          <img src="img/fb-icon.png">
+          <img src="img/twit-icon.png">
+          <img src="img/gp-icon.png">
+          <img src="img/insta-icon.png">
+          <img src="img/flic-icon.png">
+          <img src="img/pint-icon.png">
+          <img class="icon" src="img/rss-icon.png">
+          <img class="icon" src="img/mail-icon.png">
         </div> <!-- .social-icons -->
       </header>
 
