create and style shopping list

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href='https://fonts.googleapis.com/css?family=Oswald:700,400' rel='stylesheet' type='text/css'> <!-- .blog_title -->
     <link href='https://fonts.googleapis.com/css?family=Rajdhani:400,300' rel='stylesheet' type='text/css'> <!-- .blog_date -->
     <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'> <!-- main text font -->
-    <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'> <!-- .col -->
+    <link href='https://fonts.googleapis.com/css?family=Patrick+Hand' rel='stylesheet' type='text/css'><!-- shopping list -->
 
   </head>
 
@@ -54,8 +54,38 @@
       </section>
 
       <article class="recipe">
-        <div class="recipe_left col"></div>
-        <div class="recipe_right col"></div>
+        <div class="recipe_left col">
+          <form>
+            <input type="checkbox" name="list"/>
+              <label>1 1/2 cups milk</label> <br/>
+            <input type="checkbox" name="list"/>
+              <label>1/2 cup mascarpone</label> <br/>
+            <input type="checkbox" name="list"/>
+              <label>1/2 tsp pink salt</label> <br/>
+            <input type="checkbox" name="list"/>
+              <label>1 lb Black Mission Figs</label> <br/>
+            <input type="checkbox" name="list"/>
+              <label>1/2 cup brown sugar</label> <br/>
+            <input type="checkbox" name="list"/>
+              <label>2-4 tbsp water</label> <br/>
+            </form>
+        </div>
+        <div class="recipe_right col">
+          <form>
+            <input type="checkbox" name="list"/>
+              <label>1 1/2 cups heavy cream</label> <br/>
+            <input type="checkbox" name="list"/>
+              <label class="strikeout">1/3 granulated sugar</label> <br/>
+            <input type="checkbox" name="list"/>
+              <label class="strikeout">2 egg yolks</label> <br/>
+            <input type="checkbox" name="list"/>
+              <label>1 lemon, juiced</label> <br/>
+            <input type="checkbox" name="list"/>
+              <label>2 tbsp butter</label> <br/>
+            <input type="checkbox" name="list"/>
+              <label>1 cup honey roasted pecans, roughly chopped</label> <br/>
+            </form>
+        </div>
       <article>
 
       <article class="blog_info">
