--- a/index.html
+++ b/index.html
@@ -40,20 +40,20 @@
       <section>
         <h1 class="blog_title">Chocolate Pizza</h1>
         <p class="blog_date">Posted On 29 Jul 2016 / Desserts</p>
-        <!-- <div class="print">
+        <div class="print">
           <img src="img/print-icon.png">
           <p>Print</p>
-        </div> -->
+        </div>
         <img id="chocopizza" src="img/choco-pizza.png">
 
-        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+        <p class="recipetext">For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.</p>
 
-        <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+        <p class="recipetext">Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.</p>
 
-        <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+        <p class="recipetext">Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
       </section>
 
-      <article class="recipe">
+      <article id="recipe">
         <div class="recipe_left col">
           <form>
             <input type="checkbox" name="list"/>
@@ -86,7 +86,7 @@
               <label>1 cup honey roasted pecans, roughly chopped</label> <br/>
             </form>
         </div>
-      <article>
+      </article>
 
       <article class="blog_info">
        <div class="profileimg">
@@ -96,8 +96,8 @@
          <h1 class="writer_name">Vanessa Stevenson</h1>
          <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
        </div>
-     <button type="button" id="button">SHARE RECIPE</button>
-     <article>
+       <button type="button" id="button">SHARE RECIPE</button>
+     </article>
 
        <footer id="footer">
          <hr id="lefthr"></hr>
