figured out the stupid print icon and text

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
           <img src="img/flic-icon.png">
           <img src="img/pint-icon.png">
           <img class="icon" src="img/rss-icon.png">
-          <img class="icon" src="img/mail-icon.png">
+          <img src="img/mail-icon.png">
         </div> <!-- .social-icons -->
       </header>
 
       <section>
         <h1 class="blog_title">Chocolate Pizza</h1>
         <p class="blog_date">Posted On 29 Jul 2016 / Desserts</p>
-        <div class="print">
+        <div class="stupidPrint">
           <img src="img/print-icon.png">
           <p>Print</p>
         </div>
