fixed stupid footer margin

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
          <hr id="lefthr"></hr>
          <img src="img/small-logo.png">
          <p>Delicious &copy; 2016. All rights reserved.</p>
-         <p>Proudly published with Ghost</p>
+         <p class="stupidFooter">Proudly published with Ghost</p>
        </footer>
 
      </div> <!-- .wrap -->
